# md2typst

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  config.toml.example  noxfile.py  pyproject.toml  ruff.toml
.builds/: alpine.yml  ubuntu-2404.yml
notes/: design.md  version-0.2.4-announcement.md
samples/: Makefile  article.md  book.md  md2typst.toml  report.md
src/md2typst/: __init__.py  ast.py  cli.py  config.py  converter.py  frontmatter.py  generator.py
src/md2typst/parsers/: __init__.py  markdown_it.py  marko.py  mistune.py
src/mkd2typst/: __init__.py  ast.py  config.py  generator.py
src/mkd2typst/parsers/: __init__.py  base.py  markdown_it.py  marko.py  mistune.py
tests/: __init__.py
tests/a_unit/: test_ast.py  test_generator.py
tests/b_integration/: test_classes.py  test_config.py  test_diagram.py  test_footnotes.py  test_frontmatter.py  test_gfm.py  test_index.py  test_math.py  test_mermaid.py  test_parser.py  test_parsers_multi.py  test_property.py  test_style.py  test_tck.py  test_toc.py
tests/c_e2e/: test_integration.py
tests/d_benchmark/: test_benchmark.py
tests/fixtures/: corrections.yaml
tests/fixtures/commonmark/: blockquotes.md  blockquotes.typ  code.md  code.typ  emphasis.md  emphasis.typ  headings.typ  images.md  images.typ  links.md  links.typ  lists.md  lists.typ  paragraphs.md  paragraphs.typ  thematic_break.md  thematic_break.typ
tests/fixtures/gfm/: strikethrough.md  strikethrough.typ  tables.md  tables.typ
