[project]
name = "md2typst"
version = "0.2.4"
description = "Markdown to Typst converter with multiple parser support"
readme = "README.md"
authors = [
    { name = "Stefane Fermigier", email = "sf@abilian.com" }
]
requires-python = ">=3.12"
dependencies = [
    "markdown-it-py>=3.0.0",
    "click>=8.0.0",
    "mistune>=3.0.0",
    "marko>=2.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/abilian/md2typst"
Repository = "https://github.com/abilian/md2typst"
"Source (Sourcehut)" = "https://sr.ht/~sfermigier/md2typst/"
Issues = "https://github.com/abilian/md2typst/issues"
Changelog = "https://github.com/abilian/md2typst/blob/main/CHANGES.md"

[project.scripts]
md2typst = "md2typst:main"
md2pdf = "md2typst:main_pdf"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "pyyaml>=6.0.0",
    "ty>=0.0.8",
    "pyrefly>=0.46.3",
    "mypy>=1.19.1",
    "mdit-py-plugins>=0.4.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not benchmark'"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (multiple components)",
    "e2e: End-to-end tests (full workflow)",
    "benchmark: Benchmark tests (slow, run with -m benchmark)",
    "slow: Slow tests",
]
